--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,30 @@
+# NeuraRoute Frontend Dockerfile
 FROM node:18-alpine
 
+# Set work directory
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci --only=production
 
 # Copy source code
 COPY . .
 
+# Build the application
+RUN npm run build
+
+# Install serve to run the built app
+RUN npm install -g serve
+
 # Expose port
 EXPOSE 3000
 
-# Start the app
-CMD ["npm", "start"] 
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:3000 || exit 1
+
+# Run the application
+CMD ["serve", "-s", "build", "-l", "3000"] 
