--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,52 @@
 {
   "name": "neuraroute-frontend",
   "version": "1.0.0",
-  "description": "AI-Native Hyperlocal Logistics System Frontend",
+  "description": "NeuraRoute AI-Native Hyperlocal Logistics System Frontend",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.56",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-router-dom": "^6.3.0",
-    "axios": "^1.4.0",
-    "mapbox-gl": "^2.15.0",
-    "react-map-gl": "^7.0.23",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "react-router-dom": "^6.11.2",
+    "react-query": "^3.39.3",
+    "zustand": "^4.3.8",
+    "axios": "^1.4.0",
+    "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
     "lucide-react": "^0.263.1",
-    "recharts": "^2.7.2",
+    "recharts": "^2.6.2",
+    "react-leaflet": "^4.2.1",
+    "leaflet": "^1.9.4",
+    "@types/leaflet": "^1.9.3",
+    "socket.io-client": "^4.7.2",
     "date-fns": "^2.30.0",
     "clsx": "^1.2.1",
-    "web-vitals": "^2.1.4"
+    "class-variance-authority": "^0.7.0",
+    "tailwind-merge": "^1.13.2",
+    "react-error-boundary": "^4.0.11",
+    "framer-motion": "^10.16.4",
+    "@tailwindcss/forms": "^0.5.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "type-check": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +67,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7"
-  }
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.8"
+  },
+  "proxy": "http://localhost:8000"
 } 
