--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /backend/venv
 /frontend/node_modules
+/backend/app/__pycache__
+/backend/app/core/__pycache__
+/backend/app/models/__pycache__
+/backend/app/simulation/__pycache__
