--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ alembic==1.13.0
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
 redis==5.0.1
+supabase==2.3.4
 
 # AI/ML - Upgraded to latest 0.3.x+ versions for compatibility
 langchain==0.3.7
