--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,40 +4,41 @@
   "description": "NeuraRoute AI-Native Hyperlocal Logistics System Frontend",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.263.1",
+    "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "react-router-dom": "^6.11.2",
-    "react-query": "^3.39.3",
-    "zustand": "^4.3.8",
-    "axios": "^1.4.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.263.1",
-    "recharts": "^2.6.2",
     "react-leaflet": "^4.2.1",
-    "leaflet": "^1.9.4",
-    "@types/leaflet": "^1.9.3",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.6.2",
     "socket.io-client": "^4.7.2",
-    "date-fns": "^2.30.0",
-    "clsx": "^1.2.1",
-    "class-variance-authority": "^0.7.0",
     "tailwind-merge": "^1.13.2",
-    "react-error-boundary": "^4.0.11",
-    "framer-motion": "^10.16.4",
-    "@tailwindcss/forms": "^0.5.7"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -77,4 +78,4 @@
     "prettier": "^2.8.8"
   },
   "proxy": "http://localhost:8000"
-} 
+}
