Refactor agents and add AG2 decision engine
Major backend refactor: agents now support autonomous background loops, improved context serialization, and duplicate decision avoidance. Added AG2 (AutoGen) decision engine for structured Groq-backed decisions. Inventory agent now handles expiring items and creates disposal actions. Manager supports agent lifecycle orchestration. Updated config for Groq and agent settings. Frontend and docs updated for SQLite-first architecture; removed Supabase setup and legacy JS components.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,10 @@ services:
     ports:
       - "8000:8000"
     restart: unless-stopped
+    depends_on:
+      - redis
+    networks:
+      - neuraroute-network
 
 volumes:
   redis_data:
